# tino

./: .gitignore  LICENSE  Makefile  PROGRESS.md  PROGRESSing.md  README.md  SAVE_AS_FIX.md  pyproject.toml  test_minimal_app.py  test_scroll_sync.py  tino-claude-code-instructions.md  tino-requirements.md  top10.md
benchmarks/: benchmark_results.json  render_performance.py
scripts/: demo_file_operations.py  test_file_manager.py
src/tino/: __init__.py  __main__.py
src/tino/components/: __init__.py
src/tino/components/commands/: __init__.py  categories.py  command_base.py  command_palette.py  edit_commands.py  file_commands.py  file_switcher.py  format_commands.py  keybindings.py  navigation_commands.py  registry.py  view_commands.py
src/tino/components/editor/: __init__.py  cursor_tracker.py  editor_component.py  mock.py  selection_manager.py  text_metrics.py  undo_stack.py
src/tino/components/file_manager/: __init__.py  backup_manager.py  cursor_memory.py  encoding_detector.py  file_manager.py  mock.py  recent_files.py
src/tino/components/renderer/: __init__.py  cache.py  link_validator.py  markdown_renderer.py  outline_extractor.py
src/tino/core/: __init__.py  logging.py  registry.py
src/tino/core/events/: __init__.py  bus.py  types.py
src/tino/core/interfaces/: __init__.py  command.py  editor.py  file_manager.py  renderer.py
src/tino/ui/: minimal_app.py  preview_app.py  preview_widget.py
tests/: __init__.py
tests/integration/: __init__.py  test_backup_recovery.py  test_cross_platform_paths.py  test_editor_file_integration.py  test_file_operations.py
tests/unit/: __init__.py
tests/unit/components/: __init__.py  test_editor.py
tests/unit/components/commands/: __init__.py  test_command_base.py  test_command_palette.py  test_edit_commands.py  test_file_commands.py  test_file_switcher.py  test_format_commands.py  test_keybindings.py  test_navigation_commands.py  test_registry.py  test_view_commands.py
tests/unit/components/file_manager/: __init__.py  test_backup_manager.py  test_cursor_memory.py  test_encoding_detector.py  test_file_manager.py  test_mock_file_manager.py  test_recent_files.py
tests/unit/core/: __init__.py  test_event_bus.py  test_interfaces.py  test_logging.py  test_registry.py
tests/unit/ui/: test_preview_widget.py
(+5 files in other folders)
